# TEER

./: .gitignore  README.md  analyze_leaflet_gap.py  analyze_leaflet_gap_z.py  analyze_valves.py  create_mesh_from_binary.py  index.html  landing.html  mesh_visualization.py  mitral.geo  mitral_valve.geo  mitral_velocity_like.xdmf  pub_quality_meshes.py  pyproject.toml  run_blood_flow.py  server.py  valves_metadata.json  workspace.html
clip/: NT_assembled_open120_reference.stl  NT_body_FIXED_world.stl  NT_left_arm_DYNAMIC_world_open120.stl  NT_left_gripper_DYNAMIC_world_open120.stl  NT_left_leaflet_contact_pad_PROXY_world.stl  NT_right_arm_DYNAMIC_world_open120.stl  NT_right_gripper_DYNAMIC_world_open120.stl  NT_right_leaflet_contact_pad_PROXY_world.stl
data/: .gitattributes  README.md
segmentation/: fluid_simulation.py  mesh.py  pyviz.py  viz.py
segmentation/mesh_functions/: mesh_reconstruction.py
src/teer_cdss/: __init__.py  acquisition.py  blood_flow_mp4.py  cli.py  clinical.py  exceptions.py  export.py  fsi.py  mesh.py  mitral_mock.py  optimization.py  orchestrator.py  schemas.py  segmentation.py
