[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teer-cdss"
version = "0.1.0"
description = "Patient-specific TEER decision support scaffolding for mitral valve intervention planning."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.12",
  "torch>=2.2",
  "SimpleITK>=2.3",
  "pydicom>=2.4",
  "pyvista>=0.43",
  "vtk>=9.3",
  "nibabel>=5.2",
  "huggingface_hub>=0.23"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "mypy>=1.10"
]

[project.scripts]
teer-pipeline = "teer_cdss.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
